[ade]
name = "ArrayDataEngine"
version = "0.0.1"
authors = [
  { name="Alex Moran", email="salsicha@gmail.com" },
]
description = "Array data engine"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/salsicha/arraydataengine"
